--- a/index.html
+++ b/index.html
@@ -89,26 +89,26 @@
             spawnEnemy creates a terrorist sprite, spawns them randomly and adds images randomly.
         </p>
 
-        <a></a><img src="enemy.png"/></a>
+        <a></a><img src="enemy.PNG"/></a>
         <p>
             Here bullets for the terrorist are created. <br>
             enemyShoot is the function which makes the terrorist automatically shoot us. <br>
             Because there are multiple bullets, they are added in to group.
         </p>
 
-        <a></a><img src="player.png"/></a>
+        <a></a><img src="player.PNG"/></a>
         <p>
             Here bullets for the Soldier are created. <br>
         </p>
 
-        <a></a><img src="keypress.png"/></a>
+        <a></a><img src="keypress.PNG"/></a>
         <p>
             32 is the value for the spacebar. <br>
             spawnBullets is called when spacebar is pressed, ammo is decremented and a sound is played. <br>
             Bullets are only shot when game is in play state (gameState=1).
         </p>
 
-        <a></a><img src="end.png"/></a>
+        <a></a><img src="end.PNG"/></a>
         <p>
             The game only ends when any one of these conditions is true. <br>
             The conditons are:  <br>
