--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <h2>Explaining the code:</h2>
 
-        <a></a><img src="key83.png"/></a>
+        <a></a><img src="key83.PNG"/></a>
         <p>
             83 is the value given to 'S', so when 'S' key is pressed, the game will go to gameState 1 which is the play state,
             and a sound is played. <br>
